--- a/src/config.json
+++ b/src/config.json
@@ -16,7 +16,8 @@
         "No",
         "Where?",
         "Where",
-        "What"
+        "What",
+        "when"
     ],
     "SEQUENCE_LENGTH": 30,
     "NO_SEQUENCES": 30,
