--- a/src/config.json
+++ b/src/config.json
@@ -1,16 +1,23 @@
 {
     "ACTIONS": [
         "Bye",
-        "clap hands",
-        "fist",
         "Hard of hearing",
+        "Hearing",
         "Hello",
-        "hi",
         "Me or I",
         "My",
         "Name",
         "Nice to meet you",
         "No",
+        "Thank you",
+        "What",
+        "Where",
+        "Yes",
+        "You",
+        "Your",
+        "clap hands",
+        "fist",
+        "hi",
         "nodding",
         "open hand",
         "pinching nose",
@@ -18,14 +25,8 @@
         "scratching head",
         "shaking head",
         "shushing gesture",
-        "Thank you",
         "thumbs up",
-        "tongue out",
-        "What",
-        "Where",
-        "Yes",
-        "You",
-        "Your"
+        "tongue out"
     ],
     "SEQUENCE_LENGTH": 30,
     "NO_SEQUENCES": 30,
